Create basic user endpoints
