# escuagest-api/src/main/java/com/escualos/api/user/UserApiDelegateImpl.java
@@ -1,17 +1,19 @@
 package com.escualos.api.user;
 
 import com.escualos.api.UserApiDelegate;
+import com.escualos.api.testController;
 import com.escualos.domain.user.User;
 import com.escualos.domain.user.UserRepository;
 import com.escualos.domain.user.UserRoles;
 import com.escualos.model.CreateUserRequest;
 import com.escualos.model.UserResponse;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Component;
 import org.springframework.web.server.ServerWebExchange;
+import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
-import javax.annotation.security.RolesAllowed;
 import java.net.URI;
 
 @Component
@@ -24,25 +26,22 @@ public class UserApiDelegateImpl implements UserApiDelegate {
     }
 
     @Override
-    @RolesAllowed(UserRoles.SWIMMER_READ)
-    public Mono<ResponseEntity<UserResponse>> getUserByName(String username, ServerWebExchange exchange) {
-        return UserApiDelegate.super.getUserByName(username, exchange);
+    @PreAuthorize("hasAnyRole('" + UserRoles.SWIMMER_READ + "')")
+    public Mono<ResponseEntity<Flux<UserResponse>>> getAllUsers(ServerWebExchange exchange) {
+        return Mono.just(ResponseEntity.ok(userRepository.findAll().map(UserMapper::toUserResponse)));
     }
 
     @Override
-    @RolesAllowed(UserRoles.SWIMMER_READ)
+    @PreAuthorize("hasAnyRole('" + UserRoles.SWIMMER_READ + "')")
     public Mono<ResponseEntity<UserResponse>> getUserById(String id, ServerWebExchange exchange) {
         return userRepository
                 .findById(id)
-                .map(user -> new UserResponse()
-                        .username(user.getUsername())
-                        .fullname(user.getFullname())
-                        .id(user.getId()))
+                .map(UserMapper::toUserResponse)
                 .map(ResponseEntity::ok);
     }
 
     @Override
-    @RolesAllowed(UserRoles.SWIMMER_WRITE)
+    @PreAuthorize("hasAnyRole('" + UserRoles.SWIMMER_WRITE + "')")
     public Mono<ResponseEntity<UserResponse>> postNewUser(Mono<CreateUserRequest> createUserRequest, ServerWebExchange exchange) {
         return createUserRequest
             .map(createUser -> User.builder()
