# escuagest-api/src/main/resources/static/openapi.yml
@@ -17,29 +17,6 @@ tags:
       description: Find out more about our store
       url: http://swagger.io
 paths:
-  /user/usename/{username}:
-    get:
-      tags:
-        - user
-      summary: Get user by name
-      operationId: getUserByName
-      parameters:
-        - name: username
-          in: path
-          description: 'The name that needs to be fetched'
-          required: true
-          schema:
-            type: string
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserResponse'
-        404:
-          description: User not found
-          content: { }
   /user/{id}:
     get:
       tags:
@@ -64,6 +41,23 @@ paths:
           description: User not found
           content: { }
   /user:
+    get:
+      tags:
+        - user
+      summary: Get all users
+      operationId: getAllUsers
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/UserResponse'
+        404:
+          description: User not found
+          content: { }
     post:
       tags:
         - user
